Fix baseline alignment

--- a/content/media/css/default.css
+++ b/content/media/css/default.css
@@ -731,7 +731,7 @@ div.blognav .fa-li {
   width: 1em;
   margin: 0;
   left: -1.6em;
-  top: 0.3em;
+  top: 0.05em;
 
 }
 
